--- a/vignettes/DEWSeq.Rmd
+++ b/vignettes/DEWSeq.Rmd
@@ -39,6 +39,7 @@ knitr::opts_chunk$set(tidy    = FALSE,
                       message = FALSE,
                       error   = FALSE,
                       warning = TRUE)
+suppressPackageStartupMessages(require(BiocStyle))
 ```	
 
 # Preface 
