--- a/vignettes/library.bib
+++ b/vignettes/library.bib
@@ -74,6 +74,22 @@ number = {1},
 title = {{Insights into the design and interpretation of iCLIP experiments}},
 volume = {18},
 year = {2017}
+},
+@article{SIMES1986,
+author = {SIMES, R. J.},
+doi = {10.1093/biomet/73.3.751},
+file = {::},
+issn = {0006-3444},
+journal = {Biometrika},
+mendeley-groups = {ThingsOfInterest},
+month = {dec},
+number = {3},
+pages = {751--754},
+publisher = {Narnia},
+title = {{An improved Bonferroni procedure for multiple tests of significance}},
+url = {https://academic.oup.com/biomet/article-lookup/doi/10.1093/biomet/73.3.751},
+volume = {73},
+year = {1986}
 }
 
 
