--- a/vignettes/DEWSeq.Rmd
+++ b/vignettes/DEWSeq.Rmd
@@ -9,15 +9,15 @@ author:
 date: "`r format(Sys.Date(), '%m/%d/%Y')`"
 package: DEWSeq
 abstract: >
-  The identification of RNA-binding protein targets is very similar in
+  The target identification of RNA-binding proteins is very similar in
   methodology to the detection of differentially expressed regions. 
   Protocols such as eCLIP or iCLIP sequencing provide count data for
   individual nucleotides. DEWSeq implements a sliding window approach for
   the analysis of enriched regions in the immunoprecipitation (IP) sample 
-  compared to size-matched input (SMI) control samples. This vignette 
-  explains properties of eCLIP and iCLIP data related methods and 
-  and shows how to perform a sliding-window differentially expressed 
-  window approach to detect RNA-binding protein binidng sites.
+  compared to its size-matched input (SMI) control samples. This vignette 
+  explains properties of eCLIP and iCLIP data related methods 
+  and shows how to perform a differentially expressed 
+  sliding-window approach to detect RNA-binding protein's binding sites.
 output:
   rmarkdown::html_document:
     highlight: pygments
@@ -67,7 +67,8 @@ Please get familiar with this Bioconductor package before you are using DEWSeq
 
 Wolfgang Huber and Matthias Hentze for mentoring, advice and discussion. 
 Benjamin Lang and Gian Tartaglia for great help with functional analysis
-and benchmarking, as well as feedback to the vignette. Mike Love, Simon Anders, 
+and benchmarking, as well as feedback on the vignette. Ina Huppertz for 
+feeback and language improvement on the vignette. Mike Love, Simon Anders, 
 Bernd Klaus and Frederick Ziebell for comments and discussion.
 
 # Introduction 
@@ -76,22 +77,22 @@ Bernd Klaus and Frederick Ziebell for comments and discussion.
 
 RNA-binding proteins (RBPs) play a key role in the life-time 
 of RNAs. They are involved in RNA synthesis, stability, 
-degradation, transport and translation and play an 
-important layer of regulation in the cell. Over 1900 mouse 
-and over 1400 human RBPs were detected in different high-throughput 
-detection studies, a lot of them without known RNA-binding
+degradation, transport and translation and add an 
+important layer of regulation in the cell. Over 1,900 murine 
+and over 1,400 human RBPs were detected in different high-throughput 
+detection studies, many of them without known RNA-binding
 function [@Hentze2018].
 
-It is of great interest to detect binding sites of RBPs to 
-study underlying mechanisms of their RNA binding. Individual 
+It is of great interest to detect an RBP's binding sites to 
+study the underlying mechanism of its regulatory potential. Individual 
 nucleotide resolution crosslinking and immunoprecipitation (iCLIP) 
 [@Konig2010] and 
-the derived protocol enhanced CLIP (eCLIP) [@VanNostrand2016]
-sequencing protocols rely on UV crosslinking inducing covalent
+the further enhanced CLIP (eCLIP) protocol [@VanNostrand2016]
+rely on UV crosslinking inducing covalent
 bonds of RNA and proteins in close proximity. When reverse
 transcribing the RNA fragment bound to the protein, a majority
-of the time the reverse transcriptase will fall of at the
-crosslink site. Althrough
+of the time the reverse transcriptase will terminate at the
+crosslink site. Although
 eCLIP introduces updates in chemistry, the use of a size-matched 
 input (SMI) control sample is an essential addition to the protocol
 which can be also adapted to iCLIP or similar protocols.
@@ -104,14 +105,14 @@ knitr::include_graphics("truncation.png")
 In iCLIP and eCLIP, truncation events are extracted as one nucleotide position
 next to the cDNA fragment (aligned read). In the classical protocols real 
 truncations cannot be distinguished from read-through reads or other 
-reads coming for otherwise truncated reads, like it can happen at 
-RNA modification sites or at crosslinking sites from other proteins.
-This this might be individual for many proteins (and the
-remaining polypoptide of the digested protein). Other protocols like HITS-CLIP
-and PAR-CLIP [@Hafner2010] rely exclusively on read-through events only 
-(although using other reverse transcriptases). Hybrid approaches do exist but
-the technical difficulty of said protocols and many optimizations steps makes 
-them rather hard to combine.
+reads coming from otherwise truncated reads, which might be caused by
+RNA modifications or the crosslinking sites of other proteins.
+This might be different for each individual proteins (and the
+remaining polypeptide of the digested protein). Other protocols like HITS-CLIP
+and PAR-CLIP [@Hafner2010] rely exclusively on read-through events 
+(although using other reverse transcriptases). While hybrid approaches exist, 
+the technical difficulty of these protocols requires many optimizations steps,
+which makes them rather hard to combine.
 
 ```{r, fig.cap = "Truncation sites (often referred to as crosslink sites) are the neighboring position of the aligned read.", fig.small = TRUE, echo = FALSE} 
 # fig.width=200, out.width="200px"
@@ -119,11 +120,11 @@ knitr::include_graphics("truncationsite.png")
 ```
 
 In summary, iCLIP and eCLIP protocols provide count data for single-nucleotide
-positions which are subjected to many heuristic events which are described 
+positions which might be the result of many heuristic events. These are described 
 in the next chapter.
 
 
-We will need required packages for the rest of this vignette
+We need the following packages for the rest of this vignette
 
 ```{r libs, message=FALSE}
 library("IHW")
@@ -138,9 +139,9 @@ library("tidyverse")
 #### Binding modes
 
 Unlike transcription factors, RNA-binding proteins have many different binding
-modes [@Hentze2018], some bind sequence specific, some have preference for 
-structures (like stem-loops), some like to bind RNA modifications,
-others are mostly found at UTRs etc. and most of them do not have
+modes [@Hentze2018], some bind in a sequence specific manner, some have preference for 
+structures (like stem-loops), some prefer to bind RNA modifications,
+others are mostly found at UTRs. A large portion of RBPs do not have
 a known RNA-binding domain and bind using disordered regions with unknown 
 target preferences. 
 
@@ -153,14 +154,13 @@ hence different truncation event patterns.
 
 #### Chance of crosslinking
 
-UV crosslinking at 254 nm is used to induce covalent (very strong) chemical
-bonds within very close proximity of RNAs to proteins. This allows a "snapshot"
-of the RNA binding and ensures no disassociation of the RNA-protein complexes
-in further steps. This process is very unfortunately rather inefficient. 
-Typically, crosslinking with Stratlinker(R) UV crosslinkers do have an
-effecticity of ~1-3% or less (depending on UV lamp intensity and time of 
-irradiation). Newer crosslinkers with lasers can go up to ~10-20% crosslinking
-efficiency depending on protein and setup. 
+UV crosslinking at 254 nm is used to induce covalent chemical
+bonds within very close proximity of RNAs to proteins. This provides a "snapshot"
+of the RNA binding event and ensures that no disassociation of the RNA-protein complexes
+takes place in further steps.  Typically, crosslinking with Stratlinker(R) UV crosslinkers has
+a limited efficiency of around 1-3% or less (depending on UV lamp intensity and time of 
+irradiation). Newer crosslinkers with lasers reach up to 10-20% crosslinking
+efficiency depending on the protein and experimental setup. 
 
 ```{r, fig.cap = "Chance of crosslinking", fig.small = TRUE, echo = FALSE} 
 # fig.width=200, out.width="200px"
@@ -168,10 +168,11 @@ knitr::include_graphics("crosslinking_chance.png")
 ```
 
 Depending on the type of protein and the binding mode, this can result in 
-different crosslinking pattern for each protein. Crosslinking will also 
-affect other proteins, and the IP step will only enrich for RNA fragments
-bound to the RNA and crosslinked samples show a certain background 
-different to normal expression patterns measured by RNA-sequencing.
+different crosslinking patterns for each protein. While crosslinking affects
+all RBPs, the immunoprecipitation (IP) step should only enrich for RNA fragments
+bound to the RBP of interest. In turn, this means that crosslinked samples show a 
+certain background which is different to normal expression patterns measured 
+by RNA-sequencing.
 
 #### Background and antibodies
 
@@ -180,41 +181,41 @@ different to normal expression patterns measured by RNA-sequencing.
 Immunoprecipitating your (crosslinked) protein and performing sequencing 
 without any RNA digestion is called RIP-seq (without crosslinking) or 
 HITS-CLIP (with crosslinking). These studies nicely show that the
-enrichment of your protein with antibodies recognizing protein tags or
-native epitops will also enrich RNA fragments bound to the protein.
-However it is clear that the IPed samples contain almost a full transcriptomic 
-(random) background. Depending on the specificity of your antibody, 
-your purification method (e.g. type of beads) and many other factors, 
-this can vary for different proteins. The authors do not know any cases 
-where IP steps exclusively purify targets, if you find any cases, please
-contact the authors, we would really like to know.
+enrichment of your protein with antibodies, recognizing protein tags or
+native epitops will enrich RNA fragments bound to the protein.
+However, the immunoprecipitated ('IP'ed) samples closely resemble a full transcriptomic 
+background. Depending on the specificity of your antibody,  purification method 
+(e.g. type of beads) and many other factors, this degree of resemblance can vary 
+for different proteins. The authors do not know any cases where IP steps exclusively purify 
+targets. If you find any such cases, please contact the authors, for further discussions
+(we would really like to know).
 
 ##### Contaminants vs background  
 
-If you take a close look to the first iCLIP analysis protocols 
+If you take a closer look at the first iCLIP analysis protocols 
 (and lot of protocols to date), you will notice that snoRNAs, lincRNAs
-and other short RNAs are excluded from the protocol althought they 
+and other short RNAs are excluded from the analysis, although they 
 make up a majority of the signal. They were either treated as contaminants
-and dismissed right away, or more recently it was recommended to intersect the 
-data with an orthogonal data like RNA-seq knockouts and only look at the
-regions of interest. As already mentioned, it was shown that size-matched
-input (SMI) controls can control for different artifacts from crosslinking 
-and library preparation [@VanNostrand2016] and after correction it is 
-possible to detected real lincRNC, snoRNA etc binders. 
+and dismissed right away, or more recently it was recommended to compare the 
+i/eCLIP data with an orthogonal dataset like an RNA-seq knockout data and only look at the
+regions of interest that are common in both. As already mentioned, it was shown that size-matched
+input (SMI) controls can control for different artifacts coming from crosslinking 
+and library preparation [@VanNostrand2016]. After applying an enrichment correction it is 
+possible to detect lincRNA, snoRNA binders. 
 
-Crosslinked samples do have a different backgroud compared to expression
-levels (as detected with RNA-seq). Therefore it is of great importance 
-to compare the IPed sample to a proper input control. *SMI controls
-can be easily applied for any CLIP protocols*.  
+As we previously discussed, crosslinked samples do have a different background 
+compared to expressionlevels (as detected with RNA-seq). Therefore, it is of great 
+importance to compare the IPed sample to a proper input control.  
+*SMI controls can be easily applied to any CLIP protocols*.  
 
 #### RNA fragment length and RNase concentrations
 
 To narrow down the target RNAs to the binding site region, RNase is used
 to digest RNA not protected by your protein. Using different RNase
-concentration will result in different RNA fragment lengths.
-Also, if your protein is stacked tighly together protecting a 
-larger area from digestion, this can result in longer RNA fragments 
-which can affect the crosslinking pattern [@Haberman2017]. 
+concentrations will result in different RNA fragment lengths.
+In addition, it was shown that the crosslinking pattern will be affected by 
+longer RNA fragments, which occurs as a result of the protein of interest binding
+closely together, protecting a larger RNA region from digestion [@Haberman2017]. 
 
 ```{r, fig.cap = "Different RNase concentrations will result in different fragment sizes.", fig.small=TRUE, echo = FALSE} 
 knitr::include_graphics("digestionpatterns.png")
@@ -222,7 +223,7 @@ knitr::include_graphics("digestionpatterns.png")
 
 #### Read-throughs
 
-iCLIP and eCLIP depend on the truncation of the reverse transcriptase
+iCLIP and eCLIP depend on the termination of the reverse transcriptase
 at crosslink sites. In contrast, HITS-CLIP and PAR-CLIP need reverse
 transcriptases reading through the crosslink sites. 
 Both methods use different reverse transcriptases with 
@@ -234,18 +235,18 @@ polypeptide which is left after protein digestion of the protein of interest.
 knitr::include_graphics("readthrough.png")
 ```
 
-"Read-throughs" can truncate at a crosslink site from the same proteins,
-a different protein, a RNA modifications, any other unknown events or
-finish at the end of an RNA fragment. Due to the low efficency 
+"Read-through" events can truncate at crosslink sites from the same protein,
+a different protein, an RNA modification, any other unknown events or
+finish at the end of an RNA fragment. Due to the low efficiency 
 the crosslinking of multiple proteins is usually less likely, however 
-not no improbable.
+not improbable.
 
 ##### Early truncations 
 
-Early truncations can also appear on a long RNA fragment with multiple 
+Early truncations can also occur on a long RNA fragment with multiple 
 crosslink sites from different proteins or multiple crosslink sites 
 from the same protein. Again, although low crosslinking
-efficency reduces the chance of having multiple crosslink sites
+efficiency reduces the chance of having multiple crosslink sites
 at once, those events occur stochastically. 
 
 ```{r early truncation, fig.cap = "Early truncations.", echo = FALSE} 
@@ -257,12 +258,12 @@ knitr::include_graphics("earlytruncation.png")
 
 #### Differentially expressed sliding windows 
 
-Because of the properties of eCLIP or iCLIP data described above, we use a 
+Because of the properties of i/eCLIP data described above, we use a 
 sliding window approach (where different window and step sizes can be chosen in 
-the preprocessing) and test for significant enrichment in the IP over the
-control. For this, we extended `r Biocpkg("DESeq2")` for a one-sided wald 
-test to filter windows with negative wald stat values and do a right-tailed
-test on the remaining windows. The filtering step increases the performance 
+the preprocessing step) and test for significant enrichment in the IP over the
+control. For this, we extended `r Biocpkg("DESeq2")` for a one-sided 
+test: first, we filter windows with negative wald test statistic values (windows with negative log2FoldChange) 
+followed a right-tailed test on the remaining windows. The advantage is that the filtering step increases performance 
 when testing millions of windows. 
 
 ```{r deseq overview image, fig.cap = "Sliding window approach with single-nucleotide position count data", echo = FALSE} 
@@ -271,12 +272,12 @@ knitr::include_graphics("dewseqoverview.png")
 
 #### Combining significant windows
 
-Contrary to large fragments detected in ChIP-seq, the truncation sites 
-are only one nucleotide. To combine windows, `r Biocpkg("csaw")` 
-defines ChIP-seq binding regions which are then subjected to multiple
+In contrast to large fragments detected in ChIP-seq, the truncation sites 
+are only one nucleotide. To combine windows in ChIP-seq dataset, `r Biocpkg("csaw")` 
+defines binding regions which are then subjected to multiple
 hypothesis correction. In ChIP-seq many windows share coverage from large
 cDNA fragments and therefore `r Biocpkg("csaw")` performs multiple hypothesis
-correction on binding site with the SIMES method. SIMES joins coverage blocks
+correction on binding site with the SIMES method [@SIMES1986]. SIMES joins coverage blocks
 and treats them as one entity for multiple hypothesis correction. In large,
 SIMES punished p-values for long stretches of overlapping windows. Please
 refer to the `r Biocpkg("csawUserGuide")` for detailed description. 
@@ -287,32 +288,32 @@ fragments and the transcriptomic background for each gene in eCLIP or iCLIP
 often results in large coverage blocks. As seen in the picture below, the
 windows do only share information with the overlapping windows. Therefore, 
 DEWSeq corrects the p-value for each
-overlapping window with the number of overlaps using Bonferroni. 
+overlapping window with the number of overlaps using Bonferroni correction. 
 
 ```{r, fig.cap = "Sliding window approach with single-nucleotide position count data", echo = FALSE, fig.small = TRUE} 
 # fig.width=200, out.width="200px"
 knitr::include_graphics("overlapping_sliding_windows.png")
 ```
 
-Then we apply multiple hypothesis correction on the corrected p-values.
+We then apply FDR correction on the p-values corrected for overlaps using Bonferroni correction.
 
 ## Prerequisits for DEWSeq
 
 Most importantly, replicates and input controls are required for the 
 significance testing for DEWSeq. Currently, we only allow the use of 
-`r Biocpkg("DESeq2")`'s wald test, not the LRT test for complexer models.
-This will implemented later. If you want to use complexer models, you
-might want to contact the authors.
+`r Biocpkg("DESeq2")`'s wald test, not the LRT test for more complex models,
+which will be implemented later. Please contact the authors if you would like
+to use more complex models in your analysis.
 
 ### True input controls
 
-Typically, CLIP-seq samples do have a lot of background which comes from
+Typically, CLIP-seq samples show a background which comes from
 a mix of various transcripts with different expression levels.
 Additionally, UV crosslinking does not  affect RNAs in a linear fashion, 
 therefore an appropriate input control is needed for the analysis of
 eCLIP/iCLIP data. Unfortunately, total RNA-seq does not reflect the 
-UV crosslinked background, also IgG-, empty beads, or similar controls are 
-not appropriate input controls. We recommend size-matched input controls
+UV crosslinked background, also neither IgG-, empty beads, nor similar controls are 
+appropriate input controls. We recommend size-matched input controls
 (SMI) controls as performed in the eCLIP protocol [@VanNostrand2016]. 
 This type of input control is not protocol specific, therefore can be 
 easily adapted to iCLIP or other CLIP studies. Most importantly, it can
@@ -330,11 +331,11 @@ Please refer to the `r Biocpkg("csaw")` package for discussion on this topic.
 In general, we recommend to ask yourself how many replicates would you
 use when performing RNA-seq. Usually, the answer is, at least three
 for the sample and three for the control (depending on many experimental
-factors which also will apply for your CLIP study). As a tumb of rule, 
-your number of replicates ideally should not be less if you are 
+factors which also will apply for your CLIP study). As a rule of thumb, 
+your number of replicates should not be less if you are 
 interested in an transcriptome wide analysis of your RNA-binding protein.
 
-# Data preprocessing
+# Data pre-processing
 
 DEWSeq needs a countmatrix and preprocessed annotation. The
 preprocessing is done in two general steps.
@@ -342,29 +343,31 @@ preprocessing is done in two general steps.
 1. Raw data preprocessing, alignment and PCR duplication removal
 2. Extraction of crosslink sites, preprocessing of annotation and counting.
 
-## Raw data preprocessing: From fastq to bam files
+## Raw data pre-processing
 
-eCLIP or iCLIP data preprocessing can be extensive and time-consuming. 
-Generally the steps for preprocessing are:
+**From fastq to bam files**
+
+eCLIP or iCLIP data preprocessing can be time-consuming. 
+Generally, the pre-processing steps are:
 
 * Unique Molecular Identifiers (UMIs) extraction and demultiplexing
   ([Je Suite](https://gbcs.embl.de/portal/tiki-index.php?page=Je), or other
-  tools). Usually the UMI is extracted from the fasta sequence and put into
-  the header. Different tools put it at different locations (beginning or
+  tools). Usually, the UMI is extracted from the fasta sequence and added to
+  the header. Different tools add the UMI at different locations (beginning or
   end of fastq header).
 * Read quality filtering (optional)
 * Trimming of sequencing adapters (with tools like
   [cutadapt](https://cutadapt.readthedocs.io))
-* Second trimming step (extremely important for paired-end (standard) eCLIP
+* Second trimming step ($\color{red}{\text{extremely important}}$ for standard paired-end eCLIP
   libraries). This is needed because a 'bug' in the standard paired-end eCLIP
-  protocol. Hint: Single-read seCLIP [@VanNostrand2017] has a lot of advantages 
-  to standard,
-  paired-end eCLIP, one of them is that you can skip this preprocessing step.
+  protocol.  
+  _Hint: Single-read seCLIP [@VanNostrand2017] has a lot of advantages 
+  to standard, paired-end eCLIP, one of them is that you can skip this preprocessing step_
 * Quality Control ([fastqc](https://github.com/s-andrews/FastQC) with
   [multiqc](https://multiqc.info/) summary statistics or similar).
 * Alignment ([Novoalign](http://www.novocraft.com/products/novoalign/), 
   [STAR](https://github.com/alexdobin/STAR), or other (splice-aware) aligners, 
-  depending on your organisms)
+  depending on your organism).
 * PCR duplication removal also called UMI evaluation
   [Je Suite](https://gbcs.embl.de/portal/tiki-index.php?page=Je) or 
   custom tools depending on your protocol and single-read or paired-end setup.
@@ -375,18 +378,26 @@ Generally the steps for preprocessing are:
 
 Eventually, you will end up with sorted *.bam* files.
 
-## Crosslink site extraction and counting: From bam and gff3 files to count matrix and annotation
+## Crosslink site extraction and counting
 
-htseq-clip is the preprocessing pipeline developed for the use for
-DEWSeq, but other tools may be used. htseq-clip does
+**From bam and gff3 files to count matrix and annotation**
+
+[htseq-clip](http://www.hentze.embl.de/public/htseq-clip/) is the 
+preprocessing pipeline developed for the use for
+DEWSeq, but other tools may be used. 
+htseq-clip performs the following steps:
 
 * extract sites (typically crosslink sites) 
-* flatten the annotation and create an annotation mapping file
+* flatten the annotation and create a mapping file for later use
 * generate sliding windows from the flattened annotation 
-* count sites for the sliding windows
+* count sites in sliding windows
 * create count matrices 
 
-in addition it will
+```{r, fig.cap = "htseq-clip workflow", echo = FALSE, fig.small = TRUE}
+knitr::include_graphics("htseq-clip.png")
+```
+
+In addition, htseq-clip can also: 
 
 * split the annotation into UTRs, CDS
 * count non-overlapping regions (UTRs, CDS, exons, introns, etc) for 
@@ -394,7 +405,7 @@ in addition it will
 * calculating the site distance to exon/intron junctions
 
 htseq-clip is provided as a singularity
-container and comes with a Snakemake workflow for processing on local computers,
+container and comes with a [Snakemake](https://snakemake.readthedocs.io/en/stable/) workflow for processing on local computers,
 servers, or computer clusters.
 
 All you need is
@@ -454,8 +465,8 @@ We need to read in the
 
 which can be prepared with htseq-clip (see above)
 
-For this, we recommend data.table or tidyr packages to read in the data swiftly.
-To data data.table is significantly faster than tidyr.
+For this, we recommend `data.table` or `tidyr` packages to read in the data swiftly.
+In our experience, data.table is significantly faster than tidyr.
 
 ```{r loading tidyverse, eval = TRUE, results='hide'}
 library(tidyverse)
