--- a/vignettes/library.bib
+++ b/vignettes/library.bib
@@ -90,7 +90,17 @@ title = {{An improved Bonferroni procedure for multiple tests of significance}},
 url = {https://academic.oup.com/biomet/article-lookup/doi/10.1093/biomet/73.3.751},
 volume = {73},
 year = {1986}
+},
+@article{Hocq2018,
+abstract = {CLIP-seq methods provide transcriptome-wide snapshots of RNA-protein interactions in live cells. Reverse transcriptases stopping at cross-linked nucleotides sign for RNA-protein binding sites. Reading through cross-linked positions results in false binding site assignments. In the ‘monitored enhanced CLIP' (meCLIP) method, a barcoded biotinylated linker is ligated at the 5′ end of cross-linked RNA fragments to purify RNA prior to the reverse transcription. cDNAs keeping the barcode sequence correspond to reverse transcription read-throughs. Read through occurs in unpredictable proportions, representing up to one fourth of total reads. Filtering out those reads strongly improves reliability and precision in protein binding site assignment.},
+author = {Hocq, R{\'{e}}mi and Paternina, Janio and Alasseur, Quentin and Genovesio, Auguste and {Le Hir}, Herv{\'{e}}},
+doi = {10.1093/nar/gky858},
+issn = {13624962},
+journal = {Nucleic Acids Research},
+title = {{Monitored ECLIP: High accuracy mapping of RNA-protein interactions}},
+year = {2018}
 }
+
 
 
 
