--- a/NEWS
+++ b/NEWS
@@ -1,2 +1,6 @@
 Changes in version 0.99.0 (2019-09-23)
  + Submitted to Bioconductor
+
+Changes in version 1.2.0 (2020-02-03)
+ + Updated vignette to add htseq-clip pypi links
+ + LRT tests to results_DEWSeq function
