--- a/NEWS
+++ b/NEWS
@@ -7,3 +7,4 @@ Changes in version 1.0.2 (2020-02-03)
 
 Changes in version 1.1.4 (2020-04-07)
  + DEWSeq version bump for Bioconductor 3.11
+ + added missing dependency R.utils
